# goit-pythonweb-hw-04

./: README.md  main.py  pyproject.toml
output/docx/: Word2.docx  word1.docx
output/odp/: Presentation2.odp
source/Logo/: WoRd3.docx
source/work/: PP1.odp
source/work/again work/again_again work/: Excel23.ods  NEW_word4.docx
