[tool.poetry]
name = "goit-pythonweb-hw-04"
version = "0.1.0"
description = ""
authors = ["Olesia Vysotina <vysotina2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiofile = "^3.9.0"
aioshutil = "^1.5"
aiopath = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
